--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "google-auth-library": "^7.10.2"
+    "google-auth-library": "^7.10.2",
+    "googleapis": "^91.0.0",
+    "nodemailer": "^6.7.2"
   }
 }
